# backend/gen/openapi/types.gen.go
@@ -1,0 +1,101 @@
+// Package Openapi provides primitives to interact the openapi HTTP API.
+//
+// Code generated by github.com/deepmap/oapi-codegen DO NOT EDIT.
+package Openapi
+
+import (
+	"time"
+)
+
+// GetReservationsRes defines model for GetReservationsRes.
+type GetReservationsRes struct {
+	Reservations []Reservation `json:"reservations"`
+}
+
+// GetRoomsRes defines model for GetRoomsRes.
+type GetRoomsRes struct {
+	Rooms []Room `json:"rooms"`
+}
+
+// GuestsGetReservationsRes defines model for GuestsGetReservationsRes.
+type GuestsGetReservationsRes struct {
+	Reservations []Reservation `json:"reservations"`
+}
+
+// GuestsGetRoomsRes defines model for GuestsGetRoomsRes.
+type GuestsGetRoomsRes struct {
+	Rooms []GuestsRoom `json:"rooms"`
+}
+
+// GuestsPostUsersReq defines model for GuestsPostUsersReq.
+type GuestsPostUsersReq struct {
+	Name   string `json:"name"`
+	UserId string `json:"user_id"`
+}
+
+// GuestsReservation defines model for GuestsReservation.
+type GuestsReservation struct {
+	CheckIn  time.Time `json:"check_in"`
+	CheckOut time.Time `json:"check_out"`
+	Id       string    `json:"id"`
+	RoomId   string    `json:"room_id"`
+	RoomName string    `json:"room_name"`
+}
+
+// GuestsRoom defines model for GuestsRoom.
+type GuestsRoom struct {
+	HostId   string `json:"host_id"`
+	HostName string `json:"host_name"`
+	Id       string `json:"id"`
+	Name     string `json:"name"`
+	Price    int    `json:"price"`
+}
+
+// PostReservationsReq defines model for PostReservationsReq.
+type PostReservationsReq struct {
+	CheckIn  time.Time `json:"check_in"`
+	CheckOut time.Time `json:"check_out"`
+	RoomId   string    `json:"room_id"`
+}
+
+// PostRoomsReq defines model for PostRoomsReq.
+type PostRoomsReq struct {
+	Name  string `json:"name"`
+	Price int    `json:"price"`
+}
+
+// Reservation defines model for Reservation.
+type Reservation struct {
+	CheckIn   time.Time `json:"check_in"`
+	CheckOut  time.Time `json:"check_out"`
+	GuestId   string    `json:"guest_id"`
+	GuestName string    `json:"guest_name"`
+	Id        string    `json:"id"`
+	RoomId    string    `json:"room_id"`
+	RoomName  string    `json:"room_name"`
+}
+
+// Room defines model for Room.
+type Room struct {
+	Id    string `json:"id"`
+	Name  string `json:"name"`
+	Price int    `json:"price"`
+}
+
+// PostReservationsJSONBody defines parameters for PostReservations.
+type PostReservationsJSONBody PostReservationsReq
+
+// GuestsPostUsersJSONBody defines parameters for GuestsPostUsers.
+type GuestsPostUsersJSONBody GuestsPostUsersReq
+
+// PostRoomsJSONBody defines parameters for PostRooms.
+type PostRoomsJSONBody PostRoomsReq
+
+// PostReservationsRequestBody defines body for PostReservations for application/json ContentType.
+type PostReservationsJSONRequestBody PostReservationsJSONBody
+
+// GuestsPostUsersRequestBody defines body for GuestsPostUsers for application/json ContentType.
+type GuestsPostUsersJSONRequestBody GuestsPostUsersJSONBody
+
+// PostRoomsRequestBody defines body for PostRooms for application/json ContentType.
+type PostRoomsJSONRequestBody PostRoomsJSONBody
